--- a/demo/index.html
+++ b/demo/index.html
@@ -47,9 +47,9 @@
 <b>Detected QR code: </b>
 <span id="file-qr-result">None</span>
 
-<script type="module">
-    import QrScanner from "../qr-scanner.min.js";
-    QrScanner.WORKER_PATH = '../qr-scanner-worker.min.js';
+<script src="../dist/qr-scanner.min.js"></script>
+<script>
+    QrScanner.WORKER_PATH = '../dist/qr-scanner-worker.min.js';
 
     const video = document.getElementById('qr-video');
     const camHasCamera = document.getElementById('cam-has-camera');
